# CS421_Project_Calculator

./: Makefile  README.md  cs421-final-project.cabal  stack.yaml
.stack-work/: stack.sqlite3
.stack-work/ghci/d33f7485/: cabal_macros.h
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Eval.hs  Main.hs  Parser.hs
test/: Test.hs
