name:                cs421-final-project
version:             0.1.0.0
synopsis:            A brief description of your project
description:         A longer description of your project
license:             BSD3
license-file:        LICENSE
author:              Your Name
maintainer:          your.email@example.com
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable cs421-final-project
  main-is:             Main.hs
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-incomplete-patterns -fno-warn-unused-matches -fno-warn-unused-do-bind -fno-warn-name-shadowing -fno-warn-missing-signatures
  build-depends:       base >=4.7 && <5,
                       HUnit
  other-modules:       Eval, Parser
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  hs-source-dirs:      test, src
  ghc-options:         -Wall -fno-warn-incomplete-patterns -fno-warn-unused-matches -fno-warn-unused-do-bind -fno-warn-name-shadowing -fno-warn-missing-signatures
  build-depends:       base >=4.7 && <5,
                       HUnit
  other-modules:       Eval, Parser
  default-language:    Haskell2010

